05-k8s-manifests/monitoring/grafana-deployment-patch2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:11.2.2  # Актуальная версия
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30  # Даём больше времени на инициализацию
          timeoutSeconds: 5
